syntax = "proto3";
package routerprotocol.routerchain.voyager;

option go_package = "github.com/router-protocol/sdk-go/routerchain/voyager/types";

import "multichain/chain_type.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "routerchain/voyager/voyager_fund_paid_status.proto"; 

message FundsPaidRequest {
  string srcChainId = 1; 
  routerprotocol.routerchain.multichain.ChainType srcChainType = 2; 
  string srcTxHash = 3; 
  uint64 srcTimestamp = 4; 
  string contract = 5; 
  uint64 eventNonce = 6; 
  uint64 blockHeight = 7; 
  bytes messageHash = 8; 
  string forwarder = 9; 
  string forwarderRouterAddr = 10; 
  bytes  execData             = 11;
  bool   execStatus           = 12;
  VoyagerFundPaidStatus status = 13; 
  
}


message FundsPaidRequestClaimHash {
 string srcChainId = 1; 
  routerprotocol.routerchain.multichain.ChainType srcChainType = 2; 
  string srcTxHash = 3; 
  uint64 srcTimestamp = 4; 
  string contract = 5; 
  uint64 eventNonce = 6; 
  uint64 blockHeight = 7; 
  bytes messageHash = 8; 
  string forwarder = 9; 
  string forwarderRouterAddr = 10; 
  bytes  execData             = 11;
  bool   execStatus           = 12;
}
// this line is used by starport scaffolding # genesis/types/import

